# mock_interview

cmd/pipeline/: main.go
golang/: go.mod  pipeline.json
golang/internal/ingestion/: source.go
golang/internal/metrics/: collector.go
golang/internal/storage/: writer.go
golang/internal/transform/: pipeline.go
internal/config/: config.go
internal/ingestion/: csv_source.go
spark/: pyspark_interview_guide.docx  pyspark_technical_doc.docx
spark/pyspark_codebase/: pyproject.toml
spark/pyspark_codebase/config/: pipeline_config.yaml
spark/pyspark_codebase/jobs/: lakehouse_pipeline.py
spark/pyspark_codebase/tests/: test_transforms.py
spark/pyspark_codebase/utils/: delta_helpers.py  quality.py  session.py  transforms.py
